# lab-python-pyside

./: .gitignore  containers.py  example_it.qm  example_it.ts  logging.ini  main.py  pref.properties  pyproject.toml  requirements.txt  resources.py  resources.qrc  resources_rc.py  setup.py
di/: __init__.py  di.py
media/: BaseMedia.py  BlackMedia.py  HiddenMedia.py  MediaPlaylist.py  MediaTypeEnum.py  PhotoMedia.py  VideoMedia.py  WatchMedia.py  WebMedia.py  __init__.py
players/: __init__.py  base.py  black.py  digitalclock.py  hidden.py  photo.py  video.py  web.py
preferences/: Position.py  Preference.py  Setting.py  Size.py  __init__.py  test___init__.py
services/: BaseService.py  MediaPlaylistIOService.py  PreferenceService.py  __init__.py
ui/: MainWindow.py  ScreenWindow.py  SettingWidget.py  __init__.py  base.py
ui/players/: __init__.py  base.py  black.py  digitalclock.py  hidden.py  photo.py  video.py  web.py
